force-app/main/default/objects/Member_Point_Criteria__c/Member_Point_Criteria__c.object-meta.xml
<CustomObject>
    <label>QA Member Point Criteria</label>
    <nameField>
        <label>Member Point Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Member Point Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>