force-app/main/default/objects/Member_Point_Criteria__c/fields/Action_on_Error__c.field-meta.xml
<CustomField>
    <fullName>Action_on_Error__c</fullName>
    <label>Action on Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set a value</fullName>
            </value>
            <value>
                <fullName>Skip this calculation</fullName>
            </value>
            <value>
                <fullName>Skip this member</fullName>
            </value>
            <value>
                <fullName>Skip trying to assign this record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>