force-app/main/default/objects/Member_Point_Criteria__c/fields/Action_on_Error_Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Action_on_Error_Fixed_Value__c</fullName>
    <label>Action on Error Fixed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>