force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points__c.field-meta.xml
<CustomField>
    <fullName>Add_Points__c</fullName>
    <label>Add Points</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Field Value</fullName>
            </value>
            <value>
                <fullName>SUM WHERE (DATE RANGE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>