force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_Date_Field__c</fullName>
    <label>Add Points Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>