force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_Field_Name__c</fullName>
    <label>Add Points Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>