force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_Fixed_Value__c</fullName>
    <label>Add Points Fixed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>