force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_From_Date__c</fullName>
    <label>Add Points From Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>