force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_Multiplier__c</fullName>
    <label>Add Points Multiplier</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>