force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_Object__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_Object__c</fullName>
    <label>Add Points Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>