force-app/main/default/objects/Member_Point_Criteria__c/fields/Add_Points_To_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_Points_To_Date_Type__c</fullName>
    <label>Add Points To Date Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>