force-app/main/default/objects/Member_Point_Criteria__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>