force-app/main/default/objects/Member_Point_Criteria__c/fields/Field_Value_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Object_Field__c</fullName>
    <label>Field Value Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>