force-app/main/default/objects/Member_Point_Criteria__c/fields/Left1_Math_V1_to_V2__c.field-meta.xml
<CustomField>
    <fullName>Left1_Math_V1_to_V2__c</fullName>
    <description>Stores the math operator between Left Value 1 and Left Value 2.</description>
    <inlineHelpText>Select the operator between Left Value 1 and Left Value 2. If none is selected, then only Left Value 1 is used in the IF condition&apos;s left hand side.</inlineHelpText>
    <label>Left1 Math V1 to V2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(none)</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>