force-app/main/default/objects/Member_Point_Criteria__c/fields/Left1_Value2__c.field-meta.xml
<CustomField>
    <fullName>Left1_Value2__c</fullName>
    <description>Stores the actual value selected by the user, based on value type. It could be a field name (User or Object) or a fixed value.</description>
    <inlineHelpText>Select the value to use for evaluation in the IF expression. You can choose from User Field, Object Field, a Fixed Value.</inlineHelpText>
    <label>Left1 Value2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>