force-app/main/default/objects/Member_Point_Criteria__c/fields/Number_of_Times_to_Run_This_Rule__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_to_Run_This_Rule__c</fullName>
    <description>This field specifies how many times the point scoring rule will run.</description>
    <inlineHelpText>&apos;Only Once Per User&apos; means the point scoring rule will run once for each matching user. &apos;Once Per each Member Matching Rule record matched to the User&apos; means the rule will run as many times as the number of records a user is matched to by  Matching Rules</inlineHelpText>
    <label>Number of Times to Run This Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Once Per User</fullName>
            </value>
            <value>
                <fullName>Once Per each Member Matching Rule record matched to the User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>