force-app/main/default/objects/Member_Point_Criteria__c/fields/Right1_Calculate_Using_Hours__c.field-meta.xml
<CustomField>
    <fullName>Right1_Calculate_Using_Hours__c</fullName>
    <description>Stores the calculation type for work/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Right1 Value1 and Math V1 to V2 are selected AND one of the Right1 Value1 or Right1 Value2 are date/datetime.</description>
    <inlineHelpText>Select the calculation type for work/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Right1 Value1 and Math V1 to V2 are selected AND one of the Righ1 Value1 or Right1 Value2 are date/datetime.</inlineHelpText>
    <label>Right1 Calculate Using Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24/7</fullName>
            </value>
            <value>
                <fullName>Member&apos;s Working Hours Only</fullName>
            </value>
            <value>
                <fullName>Case Business Hours Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>