force-app/main/default/objects/Member_Point_Criteria__c/fields/Right1_Value2_Type__c.field-meta.xml
<CustomField>
    <fullName>Right1_Value2_Type__c</fullName>
    <description>Stores the type of value that is stored in corresponding &quot;Value&quot; field: Left1 Value1.</description>
    <inlineHelpText>Select the type of value to use. You can choose from User field, object field, a fixed value or special formula values.</inlineHelpText>
    <label>Right1 Value2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Field</fullName>
            </value>
            <value>
                <fullName>{Object} Field</fullName>
            </value>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>NOW</fullName>
            </value>
            <value>
                <fullName>TODAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>